# zero-copy-mac-inference

./: CMakeLists.txt  LICENSE  readme.md
include/: CameraCapture.h  InferencePipeline.h
models/yolov8n.mlmodelc/: metadata.json  model.mil
models/yolov8n.mlpackage/: Manifest.json
models/yolov8n.mlpackage/Data/com.apple.CoreML/: model.mlmodel
src/: CameraCapture.mm  InferencePipeline.mm  benchmark.mm  main.cpp  main.mm
